--- a/crates/mineru-sdk/Cargo.toml
+++ b/crates/mineru-sdk/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "mineru-sdk"
-version.workspace = true
-edition.workspace = true
+version = "0.1.0"
+edition = "2024"
+license = "MIT"
 
 [dependencies]
-hpx = { workspace = true }
-serde = { workspace = true, features = ["derive"] }
-serde_json = { workspace = true }
-thiserror = { workspace = true }
+hpx = "0.1.3"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
+thiserror = "2.0.17"
