--- a/crates/mineru-sdk/Cargo.toml
+++ b/crates/mineru-sdk/Cargo.toml
@@ -3,6 +3,7 @@ name = "mineru-sdk"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
+description = "Rust SDK for MinerU API - document extraction services"
 
 [dependencies]
 hpx = "0.1.3"
