--- a/bin/mineru-cli/Cargo.toml
+++ b/bin/mineru-cli/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
 name = "mineru-cli"
-version.workspace = true
-edition.workspace = true
+version = "0.1.0"
+edition = "2024"
+license = "MIT"
+description = "Command-line interface for MinerU document extraction"
 
 [dependencies]
-clap = { workspace = true, features = ["derive", "env"] }
-eyre = { workspace = true }
-mineru-sdk = { path = "../../crates/mineru-sdk" }
-serde_json = { workspace = true }
-tokio = { workspace = true, features = ["full"] }
+clap = { version = "4.5.53", features = ["derive", "env"] }
+eyre = "0.6.12"
+mineru-sdk = "0.1.0"
+serde_json = "1.0.148"
+tokio = { version = "1.48.0", features = ["full"] }
